<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

<data>
    <variable
        name="viewModel"
        type="com.curso.android.app.proyectofinal3.TextCompareViewModel" />
</data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_el_primer_texto" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_el_segundo_texto" />

    <Button
        android:id="@+id/buttonCompare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comparar" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@{viewModel.textCompareModel.comparisonResult}"
        android:textSize="18sp" />
</LinearLayout>
</layout>
